#1058: fixed missing mvn arguments